maze.lessons.maze.randommouse.RandomMouseMaze.scala.error
RandomMouseMaze:8: error: reassignment to val
    if(random3=x){
              ^RandomMouseMaze:11: error: reassignment to val
    if(random3=y){
              ^RandomMouseMaze:14: error: reassignment to val
    if(random3=z){
              ^