maze.lessons.maze.randommouse.RandomMouseMaze.scala.code
override def run() {  
  var x:Int=0
  var y:Int=1
  var z:Int=2
  while(!estSurBiscuit){
    random3()
    if(random3=x){
      avance()
    }
    if(random3=y){
      gauche()
    }
    if(random3=z){
      droite()
    }
    
    
    
    
  }
    prendBiscuit()
} 

